--- a/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
+++ b/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
@@ -110,7 +110,7 @@
 
 					</div> <!-- End step-details -->
 					</div>
-				<div class="col-md-4 ">
+				<div >
 
 					<div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900" id="idResumen">
 								<div class="single-pricing" align="middle" >
@@ -123,15 +123,15 @@
 										</div>
 									</div>
 									<ul class="package-features">
-										<li><span ng-repeat="record in records" class="step-description"></span>Resumen: <td id="idNombre">{{record.name}}</td></li>
-										<li><span class="step-description"></span>Fecha Inicio:<td id="idFechaInicio">inicio1</td> </li>
-										<li><span class="step-description"></span>Fecha Final: <td id="idFechaFinal">final1</td></li>
+										<li><span ng-repeat="record in records" class="step-description"></span>Resumen: <td id="idNombre">Vacaciones en Estambul</td></li>
+										<li><span class="step-description"></span>Fecha Inicio:<td id="idFechaInicio">2016/03/18</td> </li>
+										<li><span class="step-description"></span>Fecha Final: <td id="idFechaFinal">2016/03/20</td></li>
 
 									</ul>
 
 									<div class="sign-up">
 										<a href="#" class="fancy-button button-line btn-col zoom">
-											<p title="Ver" style="font-size:12px">Compartir</p>
+                                                                                    <p title="Ver" style="font-size:12px" ui-sref="evento">Ver Eventos</p>
 											<!--&#10084 corazon-->
 										</a>
 									</div>
@@ -150,7 +150,7 @@
 
 
 		</div>
-	
+	</div>
 
 
 
