--- a/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
-<div>
 
- <div class="section-overlay">
+<section class="section-overlay2">
 
-            </div>
-<section class="container features center">
+<div class="container features center">
 	<div class="container">
 		<div class="portfolio-project">
 			<div class="row">
@@ -18,7 +16,7 @@
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Feature heading" style="">
 								<img src="resources/images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Dubai9</h4>
+								<h4 class="feature-title color-scheme">Dubai</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
@@ -34,19 +32,19 @@
 				<div class="col-md-3 project-details">
 					<h5>Project Details 2</h5>
 					<ul class="details-list">
-						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Musical</li>
-						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> 27 Dec 2014</li>
-						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> Jhone Doe</li>
-						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="#"><strong>themegret</strong></a></li>
+						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong>Cultural</li>
+						<li><i class="fa fa-calendar"></i> <strong class="strong">Date: </strong> Todos los días</li>
+						<li><i class="fa fa-group"></i> <strong class="strong">Client: </strong> Pepito Perez</li>
+						<li><i class="fa fa-link"></i> <strong class="strong">Project url: </strong> <a href="http://www.visitdubai.com/en"><strong>visitdubai</strong></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
-					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one
-					thing Tree i years very. Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.
-					Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.</p>
-                                         <h6> Horario </h6>
-                                        <ul class="details-list">
-						<li><i class="fa fa-calendar"></i> <strong class="strong">Desde: </strong> 27 Dec 2016 <i class="fa fa-calendar"></i> <strong class="strong">Hasta: </strong> 28 Dec 2016 </li>
+                                        <p  style="color:white;">La ciudad de Dubai es el principal centro urbano del Emirato de Dubai. Ubicado en una resguardada
+                                            bahía del Golfo Pérsico, esta ciudad evolucionó de pequeño pueblo pesquero a importante centro de
+                                            intercambio marítimo, siendo famoso por tener uno de los mercados más importantes de Arabia.</p>
+                                         <h6 style="color:white;"> Horario </h6>
+                                        <ul class="details-list" style="color:white;">
+						<li style="color:white;"><i class="fa fa-calendar" style="color:white;"></i> <strong class="strong" style="color:white;">Desde: </strong>  Todos los días <i class="fa fa-calendar" style="color:white;"></i> <strong class="strong" style="color:white;">Hasta: </strong>  Todos los días </li>
 					</ul>
 
                                 </div>
@@ -62,6 +60,9 @@
 			</div>
 		</div>
 	</div>
+    </div>
 
 </section>
-</div>
+
+
+
