background contrast fix

--- a/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento1.tpl.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
+<div>
 
+ <div class="section-overlay">
 
+            </div>
 <section class="container features center">
 	<div class="container">
 		<div class="portfolio-project">
@@ -61,4 +64,4 @@
 	</div>
 
 </section>
-
+</div>
