--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -4,6 +4,11 @@
 
 
 <!--=== Features section Starts ===-->
+<div>
+
+ <div class="section-overlay">
+
+            </div>
 	<section>
 		<div class="container features center">
 			<div class="row">
@@ -171,3 +176,4 @@
                     </div>
 	</section>
 	<!--=== Features section Ends ===-->
+  </div>
