background contrast fix

--- a/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
+++ b/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
@@ -1,4 +1,8 @@
+  <div>
 
+ <div class="section-overlay">
+
+            </div>
 <div class="container features center">
 <div class="row porfolio-container">
 				<div class="col-md-10 col-md-offset-1 center section-title">
@@ -172,3 +176,4 @@
                             </div>
 </div>
 <!--==== MailChimp Widget plugin ====-->
+  </div>
