Viajero Edit model

--- a/primid/src/main/webapp/src/modules/section-H/section-home.tpl.html
+++ b/primid/src/main/webapp/src/modules/section-H/section-home.tpl.html
@@ -7,7 +7,7 @@
 				<div class="row">
 					<h1 class="well-come">Conoce, disfruta y opina.</h1>
 
-                                        
+
 					<div class="col-md-8 col-md-offset-2">
 						<p class="intro-message">Conoce lugares increibles en todo el planeta que esperan por ti.</p>
 
@@ -77,3 +77,4 @@
                   </div>
                  </div>
                 </div>
+                     </div>
