--- a/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
@@ -20,7 +20,7 @@
                                     <label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /> </label>
 
                             </div>
-                            <button type="submit" class="fancy-button button-line button-orange subform center" ng-hide="ctrl.editMode">
+                            <button type="submit" class="fancy-button button-line button-orange subform center" ng-hide="ctrl.editMode" data-toggle="modal" data-target="#myModal1">
                                     Editar cuenta
                                     <span class="icon">
                                             <i class="fa fa-file-o"></i>
@@ -58,3 +58,46 @@
             </div>
 	</div>
     </div>
+
+<div id="myModal1" class="modal fade" role="dialog">
+					  <div class="modal-dialog">
+
+                <!-- Modal content-->
+                    <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                             <h4 class="modal-title">Editar</h4>
+                                                      <form role="form" novalidate name="form" id="review-form" ng-submit="ctrl.saveRecord()">
+                                                        <div class="form-group">
+                                                        <label for="name">Nombre completo:</label>
+                                                        <input type="name"  id="name" name="name" class="form-control" ng-model="currentRecord.name">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="email">Correo:</label>
+                                                            <input type="email" name="email" class="form-control" id="email" ng-model="currentRecord.email">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="user">Usuario:</label>
+                                                            <input type="name" class="form-control" id="user" name="user" ng-model="currentRecord.user">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="pass">Clave:</label>
+                                                            <input type="password" class="form-control" id="pass" name="pass" ng-model="currentRecord.pass">
+                                                                <div class="form-group">
+                                                            <label for="pwd">Confirmar Clave:</label>
+                                                            <input type="password" class="form-control" id="pwd">
+                                                                </div>
+                                                                <div class="checkbox">
+                                                            <label><input type="checkbox"> Guardar CAmbios</label>
+                                                                </div>
+                                                                 <button type="submit" class="btn btn-default" ng-click="ctrl.createRecord()">Guardar</button>
+                                                          </form>
+                                                      <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" ng-click="ctrl.fetchRecords()" data-dismiss="modal">Cerrar</button>
+                                                      </div>
+                                 </div>
+
+                  </div>
+                 </div>
+                </div>
+                     </div>
