--- a/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
+++ b/primid/src/main/webapp/src/modules/Timeline/timeline2.tpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Timeline | Serializacion de datos </title>
+  <title>Timeline | Serializacion de datos /json</title>
 
   <style>
     body, html {
