--- a/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
+++ b/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
@@ -3,7 +3,7 @@
 <div class="row porfolio-container">
 				<div class="col-md-10 col-md-offset-1 center section-title">
 					<h3 style="color:grey">Multimedia</h3>
-                                        <h5 style="color:grey"><b>¡Accede, agrega y edita a los recuerdos vividos en tu viaje a través de tus fotos, música y videos!</b></h5>
+                                        <h5 style="color:grey"><strong>¡Accede, agrega y edita a los recuerdos vividos en tu viaje a través de tus fotos, música y videos!</strong></h5>
 				</div>
 				<!-- Single screenshot starts -->
 				<div class="col-md-4 col-sm-4 col-xs-6">
