--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -4,15 +4,16 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Primid</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<link rel="stylesheet" href="resources/css/bootstrap.css" />
-<link rel="stylesheet" href="resources/css/bootstrap.min.css" />
-<link rel="stylesheet" href="resources/css/font-awesome.min.css" />
-<link rel="stylesheet" href="resources/css/linea-icon.css" />
-<link rel="stylesheet" href="resources/css/fancy-buttons.css" />
+<link rel="stylesheet" href="resources/css/bootstrap.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/font-awesome.min.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/linea-icon.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/fancy-buttons.css" type="text/css"/>
 
 <!--=== Google Fonts ===-->
 <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
@@ -24,20 +25,19 @@
 <link href='http://fonts.googleapis.com/css?family=Varela+Round|Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 <!--=== Other CSS files ===-->
-<link rel="stylesheet" href="resources/css/animate.css" />
-<link rel="stylesheet" href="resources/css/jquery.vegas.css" />
-<link rel="stylesheet" href="resources/css/baraja.css" />
-<link rel="stylesheet" href="resources/css/jquery.bxslider.css" />
+<link rel="stylesheet" href="resources/css/animate.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/jquery.vegas.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/baraja.css" type="text/css"/>
+<link rel="stylesheet" href="resources/css/jquery.bxslider.css" type="text/css"/>
 
 <!--=== Main Stylesheets ===-->
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <!--=== Main Stylesheets ===-->
-<link rel="stylesheet" href="resources/css/style.css" />
-<link rel="stylesheet" href="resources/css/responsive.css" />
+<link rel="stylesheet" href="resources/css/style.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/responsive.css" type="text/css" />
 
 <!--=== Color Scheme, three colors are available red.css, orange.css and gray.css ===-->
-<link rel="stylesheet" id="scheme-source" href="resources/css/schemes/orange.css" />
-
+<link rel="stylesheet" id="scheme-source" href="resources/css/schemes/orange.css" type="text/css" />
 <!--=== Internet explorer fix ===-->
 <!-- [if lt IE 9]>
         <script src="http://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -98,7 +98,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-10 col-md-offset-1 center section-title">
-						<h3>Dejanos un mensaje</h3>
+						<h3>Dejanos un mensaje - Prueba6</h3>
 					</div>
 
 					<div class="confirmation">
@@ -186,7 +186,11 @@
 
 <!--==== Custom Script files ====-->
 <script type="text/javascript" src="resources/js/custom.js"></script>
-
+<!-- se gregan todas los archivos JavaScript de cada modulo que necesita el index.--><script src="src/modules/evento/evento.mod.js" type="text/javascript"></script>
+<script src="src/modules/evento/evento.ctrl.js" type="text/javascript"></script>
+<script src="src/modules/evento/evento.svc.js" type="text/javascript"></script>
+<script src="src/modules/evento/evento.mock.js" type="text/javascript"></script>
+<script src="src/modules/evento/evento.mod.js" type="text/javascript"></script>
 </body>
 </html>
 
