--- a/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/viajero/viajero.tpl.html
@@ -1,131 +1,154 @@
-<div id="sectionViajero" class="home-section-wrap center">
-            <div class="section-overlay">
 
+<div id="sectionViajero" class="viajero-wrap center">
+    <div class="section-overlay"></div>
+    <section>
+    <div class="container viajero center " >
+        <div class="row">
+            <div class="container" ng-repeat="record in records">
+                <h1>{{record.name}}</h1>
+                <h3>Welcome back</h3>
             </div>
-            <div class="container home">
+            <div class="container">
+                <div class="main row">
+                    <article class="col-xs-12 col-sm-8 col-md-9 col-lg-12 center">
+                        <h1>  </h1>
+                        <h1>  </h1>
+                        <h3>Resumen de historia</h3>
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">8 Columnas</h4>
+                        <h4 class="visible-md">9 Columnas</h4>
+                        <h4 class="visible-lg">Foto del man</h4>
+
+                        <img src="resources/images/profile.jpg" class="img-circle">
+                        </div>
+
+                    </article>
+
+                    <aside class="col-xs-12 col-sm-4 col-md-3 col-lg-12">
+
+                        <h3>RESUMEN CUENTA</h3>
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">4 Columnas</h4>
+                        <h4 class="visible-md">3 Columnas</h4>
+                        <h4 class="visible-lg">Edita tu perfil</h4>
+                        <table class="table table-bordered">
+                        <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+                        </table>
+                    </aside>
+
+                </div>
+
                 <div class="row">
 
-                    <h1 class="well-come">Bienvenido, Juan</h1>
-                    <div class="col-md-2 col-md-offset-2 center section-title">
-                    <div class="col-md-0 step-img">
-                            <img src="resources/images/profile.jpg" class="img-circle profile">
+                    <div class=" col-xs-12 col-sm-6 col-md-3">
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">6 Columnas</h4>
+                        <h4 class="visible-md">3 Columnas</h4>
+                        <div class="col-md-2 center">
+                            <div class="step-no">
+                                <span class="no-inner">1</span>
                             </div>
-                            <h4>Pepito Perez </h4>
+                        </div>
+                        <h4 class="visible-lg btn-col hover">  Itinerarios</h4>
+
+                        <!-- Intinerario1 -->
+                          <div id="bx-pager" class="client-photos">
+                                    <a  href="" class="photo-hold">
+                                        <span class="photo-bg">
+                                            <img src="resources/images/itinerarios.png" alt="" /> <!-- Client photo 1 -->
+                                        </span>
+                                    </a>
+
+                                </div>
+
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">6 Columnas</h4>
+                        <h4 class="visible-md">3 Columnas</h4>
+                        <div class="col-md-2 center">
+                            <div class="step-no">
+                                <span class="no-inner">2</span>
+                            </div>
+                        </div>
+                        <h4 class="visible-lg btn-col hover">  Fotos</h4>
+                        <div id="bx-pager" class="client-photos">
+                                    <a  href="" class="photo-hold">
+                                        <span class="photo-bg">
+                                            <img src="resources/images/fotos.png" alt="" /> <!-- Client photo 1 -->
+                                        </span>
+                                    </a>
+
+                                </div>
                     </div>
 
-                    <form class="contact-form support-form center">
-
-                            <div class="col-lg-12">
-                                    <label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /> </label>
-                                    <label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /> </label>
-
+                    <div class=" col-xs-12 col-sm-6 col-md-3">
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">6 Columnas</h4>
+                        <h4 class="visible-md">3 Columnas</h4>
+                        <div class="col-md-2 center">
+                            <div class="step-no">
+                                <span class="no-inner">3</span>
                             </div>
-                            <button type="submit" class="fancy-button button-line button-orange subform center" ng-hide="ctrl.editMode" data-toggle="modal" data-target="#myModal1">
-                                    Editar cuenta
-                                    <span class="icon">
-                                            <i class="fa fa-file-o"></i>
-                                    </span>
-                            </button>
-                            <button id="save-Cuenta" type="submit" form="cuenta-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" data-toggle="modal" data-target="#myModal2"><span class="glyphicon glyphicon-save"></span> Save</button>
-                            <button type="submit" class="fancy-button button-line button-orange subform center" ng-hide="ctrl.editMode">
-                                Editar Foto
-                                    <span class="icon">
-                                            <i class="fa fa-file-o"	></i>
-                                    </span>
-                            </button>
-                          <button id="cancel-editorial" type="button" form="editorial-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                        </div>
+                        <h4 class="visible-lg btn-col hover">  Eventos</h4>
+                         <div id="bx-pager" class="client-photos">
+                                    <a  href="" class="photo-hold">
+                                        <span class="photo-bg">
+                                            <img src="resources/images/eventos.png" alt="" /> <!-- Client photo 1 -->
+                                        </span>
+                                    </a>
 
-                    </form>
-                    <div ng-hide="ctrl.editMode" class="col-md-6">
-                        <table class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="record in records">
-                                    <td>{{record.name}}</td>
-                                    <td>
-                                        <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ng-click="ctrl.editRecord(record)"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                                        <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                                </div>
                     </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <h4 class="visible-xs">12 Columnas</h4>
+                        <h4 class="visible-sm">6 Columnas</h4>
+                        <h4 class="visible-md">3 Columnas</h4>
+                        <div class="col-md-2 center">
+                            <div class="step-no">
+                                <span class="no-inner">4</span>
+                            </div>
+                        </div>
+                        <h4 class="visible-lg btn-col hover">  Tu mapa</h4>
+                         <div id="bx-pager" class="client-photos">
+                                    <a  href="" class="photo-hold">
+                                        <span class="photo-bg">
+                                            <img src="resources/images/maps.png" alt="" /> <!-- Client photo 1 -->
+                                        </span>
+                                    </a>
+
+                                </div>
+                    </div>
+                </div>
             </div>
-	</div>
+        </div>
+
+        <footer>
+            <div class="container hover">
+                <h3>Usuario</h3>
+                <h4>mensaje motivacional</h4>
+                <div ng-include="'src/modules/author/author.books.html'"></div>
+            </div>
+        </footer>
+        </section>
     </div>
 
-<div id="myModal1" class="modal fade" role="dialog">
-					  <div class="modal-dialog">
 
-                <!-- Modal content-->
-                    <div class="modal-content">
-                              <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                             <h4 class="modal-title">Editar</h4>
-                                                      <form role="form" novalidate name="form" id="review-form" ng-submit="ctrl.saveRecord()">
-                                                        <div class="form-group">
-                                                        <label for="name">Nombre completo:</label>
-                                                        <input type="name"  id="name" name="name" class="form-control" ng-model="currentRecord.name">
-                                                                </div>
-                                                                <div class="form-group">
-                                                            <label for="email">Correo:</label>
-                                                            <input type="email" name="email" class="form-control" id="email" ng-model="currentRecord.email">
-                                                                </div>
-                                                                <div class="form-group">
-                                                            <label for="user">Usuario:</label>
-                                                            <input type="name" class="form-control" id="user" name="user" ng-model="currentRecord.user">
-                                                                </div>
-                                                                <div class="form-group">
-                                                            <label for="pass">Clave:</label>
-                                                            <input type="password" class="form-control" id="pass" name="pass" ng-model="currentRecord.pass">
-                                                                <div class="form-group">
-                                                            <label for="pwd">Confirmar Clave:</label>
-                                                            <input type="password" class="form-control" id="pwd">
-                                                                </div>
-                                                                <div class="checkbox">
-                                                            <label><input type="checkbox"> Guardar CAmbios</label>
-                                                                </div>
-                                                                 <button type="submit" class="btn btn-default" ng-click="ctrl.createRecord()">Guardar</button>
-                                                          </form>
-                                                      <div class="modal-footer">
-                                                        <button type="button" class="btn btn-default" ng-click="ctrl.fetchRecords()" data-dismiss="modal">Cerrar</button>
-                                                      </div>
-                                 </div>
 
-                  </div>
-                 </div>
-                </div>
-                     </div>
-<div id="myModal2" class="modal fade" role="dialog">
-					  <div class="modal-dialog">
 
-                <!-- Modal content-->
-                    <div class="modal-content">
-                              <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                             <h4 class="modal-title">Editar Foto</h4>
-                                                      <form role="form" novalidate name="form" id="review-form" ng-submit="ctrl.saveRecord()">
-                                                            <label for="pass">Clave:</label>
-                                                            <input type="password" class="form-control" id="pass" name="pass" ng-model="currentRecord.pass">
-                                                                <div class="form-group">
-                                                            <label for="pwd">Confirmar Clave:</label>
-                                                            <input type="password" class="form-control" id="pwd">
-                                                                </div>
-                                                                <div class="checkbox">
-                                                            <label><input type="checkbox"> Guardar CAmbios</label>
-                                                                </div>
-                                                                 <button type="submit" class="btn btn-default" ng-click="ctrl.createRecord()">Guardar</button>
-                                                          </form>
-                                                      <div class="modal-footer">
-                                                        <button type="button" class="btn btn-default" ng-click="ctrl.fetchRecords()" data-dismiss="modal">Cerrar</button>
-                                                      </div>
-                                 </div>
-                  </div>
-                 </div>
-                </div>
-             </div>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+
